<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.danzki</groupId>
  <artifactId>otus-java</artifactId>
  <version>${revision}</version>

  <packaging>pom</packaging>

  <name>OTUS Home work</name>
  <description>Project with all homeworks for OTUS Java Developer course</description>

  <developers>
    <developer>
      <name>dan.kapustin</name>
      <email>dan.kapustin@gmail.com</email>
    </developer>
  </developers>

  <modules>
    <module>hw01-maven</module>
    <module>hw02-containers</module>
    <module>hw03-testing</module>
    <module>hw04-bytecode</module>
    <module>hw05-gc</module>
    <module>HW06-atm</module>
    <module>hw07-depart</module>
    <module>hw08-SJW</module>
    <module>hw09-ORM</module>
    <module>hw10-Hibernate</module>
    <module>hw11-cache</module>
    <module>hw12-web</module>
    <module>hw13-IoC</module>
    <module>hw14-sequience</module>
    <module>hw15-messageSystem</module>
  </modules>

  <properties>

    <!--region General-->
    <exec.mainClass>com.danzki.DbServiceHibernateApp</exec.mainClass>
    <jar.name>${project.name}-${revision}</jar.name>
    <revision>2019-12-SNAPSHOT</revision>
    <java.version>13</java.version>
    <minimal.maven.version>3.6.1</minimal.maven.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!--endregion-->
    <!--region BOMs -->
    <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
    <!--endregion-->

    <!--region Libs -->
    <com.google.guava.version>28.0-jre</com.google.guava.version>
    <error_prone_annotations.version>2.3.3</error_prone_annotations.version>
    <commons-io.version>2.6</commons-io.version>
    <jmh-core.version>1.21</jmh-core.version>
    <checker.version>2.9.0</checker.version>
    <annotations.version>17.0.0</annotations.version>
    <jcip-annotations.version>1.0</jcip-annotations.version>
    <spotbugs.version>4.0.0-beta3</spotbugs.version>
    <lang3.version>3.0</lang3.version>
    <asm.version>7.3.1</asm.version>
    <jackson.version>2.9.9.3</jackson.version>
    <javax.json.version>1.1.4</javax.json.version>
    <protobuf.version>3.11.4</protobuf.version>
    <!--endregion-->

    <!--region testing - JUnit, AssertJ, Mockito, Hacrest -->
    <junit-jupiter.version>5.3.2</junit-jupiter.version>
    <assertj.version>3.12.2</assertj.version>
    <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
    <mockito.version>2.27.0</mockito.version>
    <!--endregion-->

    <!--region Plugins-->
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>

    <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
    <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>

    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
    <exec.executable>java</exec.executable>
    <jar.name>${project.name}-${revision}</jar.name>

    <lombok.version>1.18.12</lombok.version>
    <lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version>
    <lombok.verbose>true</lombok.verbose>
    <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
    <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
    <lombok.testSourceDirectory>${project.basedir}/src/test/java</lombok.testSourceDirectory>
    <!--endregion-->

    <!--region db-->
    <h2database.version>1.4.197</h2database.version>
    <hibernate-core.version>5.4.4.Final</hibernate-core.version>
    <mongo.version>3.12.1</mongo.version>
    <!--endregion-->

    <!--region logs-->
    <logback-classic.version>1.2.3</logback-classic.version>
    <!--endregion-->

    <!--region web-->
    <jetty.version>9.4.27.v20200227</jetty.version>
    <gson.version>2.8.5</gson.version>
    <freemarker.version>2.3.28</freemarker.version>
    <!--endregion-->
    <protoc-jar-maven-plugin.version>3.11.4</protoc-jar-maven-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!--region BOMs-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!--endregion-->

      <!--region libs-->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${com.google.guava.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <!--endregion-->

      <!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne) -->
      <dependency>
        <groupId>org.checkerframework</groupId>
        <artifactId>checker</artifactId>
        <version>${checker.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>${annotations.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>net.jcip</groupId>
        <artifactId>jcip-annotations</artifactId>
        <version>${jcip-annotations.version}</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-annotations</artifactId>
        <version>${spotbugs.version}</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>com.google.errorprone</groupId>
        <artifactId>error_prone_annotations</artifactId>
        <version>${error_prone_annotations.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>asm.asm</groupId>
        <artifactId>asm</artifactId>
        <version>${asm.version}</version>
      </dependency>
      <!--endregion-->

      <!--region test-->
      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-core</artifactId>
        <version>${jmh-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-generator-annprocess</artifactId>
        <version>${jmh-core.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit-jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>java-hamcrest</artifactId>
        <version>${java-hamcrest.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit-jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <!--endregion-->
    </dependencies>
  </dependencyManagement>

  <dependencies>

    <!--region Test dependencies - JUnit Jupiter, AssertJ, Hamcrest, Mockito -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>java-hamcrest</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
    </dependency>
    <!--endregion-->

    <!--regin Libs-->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <!--endregion-->

  </dependencies>

  <build>

    <defaultGoal>verify exec:exec</defaultGoal>

    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>--enable-preview</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>--enable-preview</argLine>
            <includes>
              <include>**/Test*.java</include>
              <include>**/*Test.java</include>
              <include>**/*Tests.java</include>
              <include>**/*TestCase.java</include>
            </includes>
            <properties>
              <excludeTags>slow</excludeTags>
            </properties>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven-assembly-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven-enforcer-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${maven-shade-plugin.version}</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
              <configuration>
                <transformers>
                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                    <mainClass>${exec.mainClass}</mainClass>
                  </transformer>
                </transformers>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      </plugins>

  </build>
</project>
